--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-Django==2.1.5
-dj-database-url==0.4.2
-dj-static==0.0.6
-gunicorn==19.7.1
-Unipath==1.1
-python-decouple==3.1
-Pillow==4.2.1
-Markdown==2.6.8
-bleach==2.1.3
-psycopg2==2.7.3
-whitenoise==3.3.0
-humanize==0.5.1
-django-widget-tweaks==1.4.1
+Django
+dj-database-url
+dj-static
+gunicorn
+Unipath
+python-decouple
+Pillow
+Markdown
+bleach
+psycopg2
+whitenoise
+humanize
+django-widget-tweaks
